@@ -6,6 +6,8 @@ Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
 02. libqmail.spec.in: updated SPEC post fedora review
 - 10/06/2023
 03. tcpopen.c: added missing return for unix domain socket
+- 28/06/2023
+04. added tcpremoteip() function
 
 * Sun Apr 23 2023 16:55:15 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
 Release 1.1.3-1.1 Start 08/02/2023 End 23/04/2023
